# kompline

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  demo.py  pyproject.toml
agents/: PLAN.md  __init__.py  config.py  database.py  git_loader.py  llm.py  logging_utils.py  orchestrator.py  prompt_loader.py  reporter.py  run.py  run_all.ps1  validator.py
agents/prompts/: __init__.py  orchestrator.md  reporter.md  validator.md
agents/sql/: scan_schema.sql
api/: __init__.py  main.py  schemas.py
compliance_extractor/: app.py  requirements.txt
config/: __init__.py  settings.py
deprecated_rag_embedding/: Dockerfile  README.md  app.py  index.faiss  requirements.txt
docs/: IMPLEMENTATION_PLAN.md  PRD.md
docs/plans/: 2026-01-20-agent-system-integration.md  2026-01-20-frontend-redesign.md
examples/deposit_platform/: README.md  __init__.py  api.py  config.py  data.py  models.py  ranking.py
frontend/: package-lock.json  package.json
kompline/: __init__.py  db.py  demo_data.py  runner.py  supabase_client.py
kompline/agents/: __init__.py  audit_agent.py  audit_orchestrator.py  code_analyzer.py  code_search_agent.py  orchestrator.py  report_generator.py  rule_evaluator.py  (+1 more)
rag_embedding/: README.md  app.py  requirements.txt
samples/: demo_scenario.py  deposit_ranking.py
supabase/: schema.sql
tests/: __init__.py  test_artifact_registry.py  test_compliance_registry_supabase.py  test_github_provider.py  test_i18n.py  test_supabase_integration.py  test_supabase_provider.py
ui/: app.py
web/: next.config.ts  package-lock.json  package.json
(+236 files in other folders)
